@@ -1,0 +1,38 @@
+<?xml version="1.0"?>
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+<project name="location" default="all">
+  <target name="all">
+    <fail>Only use this build file from within tests</fail>
+  </target>
+
+  <target name="testPlainTask">
+    <echo id="echo">Hello</echo>
+  </target>
+
+  <target name="testStandaloneType">
+    <echo id="echo2">Hello</echo>
+    <fileset id="fs" dir="."/>
+  </target>
+
+  <target name="testConditionTask">
+    <condition property="foo" id="cond">
+      <equals arg1="bar" arg2="baz"/>
+    </condition>
+  </target>
+
+</project>
