@@ -48,14 +48,6 @@ public abstract class Task extends ProjectComponent {
     protected String description;
 
     /**
-     * Location within the build file of this task definition.
-     * @deprecated since 1.6.x. 
-     *             You should not be accessing this variable directly.
-     *             Please use the {@link #getLocation()} method.
-     */
-    protected Location location = Location.UNKNOWN_LOCATION;
-
-    /**
      * Name of this task to be used for logging purposes.
      * This defaults to the same as the type, but may be
      * overridden by the user. For instance, the name "java"
@@ -188,32 +180,6 @@ public abstract class Task extends ProjectComponent {
      * @exception BuildException if something goes wrong with the build.
      */
     public void execute() throws BuildException {
-    }
-
-    /**
-     * Returns the file/location where this task was defined.
-     *
-     * @return the file/location where this task was defined.
-     *         Should not return <code>null</code>. Location.UNKNOWN_LOCATION
-     *         is used for unknown locations.
-     *
-     * @see Location#UNKNOWN_LOCATION
-     */
-    public Location getLocation() {
-        return location;
-    }
-
-    /**
-     * Sets the file/location where this task was defined.
-     *
-     * @param location The file/location where this task was defined.
-     *                 Should not be <code>null</code>--use
-     *                 Location.UNKNOWN_LOCATION if the location isn't known.
-     *
-     * @see Location#UNKNOWN_LOCATION
-     */
-    public void setLocation(Location location) {
-        this.location = location;
     }
 
     /**
